tests/neg-macros/newClassExtendsOnlyTrait/Test_2.scala
import scala.language.experimental.mode

def test: Foo = makeClass("foo") // error
